--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-RelationExtraction/emnlp2017-relation-extraction-master/resources/glove/glove.6B.50d.txt
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -74,3 +72,7 @@ output/
 
 last_*
 .nfs*
+
+LAMA/data/
+data/ftrace/
+trex/
