--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
 absl-py==0.14.1
+aiohttp==3.8.1
+aiosignal==1.2.0
 argcomplete==1.12.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 astunparse==1.6.3
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==21.3.0
+autopep8==1.6.0
 backcall==0.2.0
+black==22.3.0
+bleach==4.1.0
 blis==0.7.4
 boto==2.49.0
 boto3==1.18.50
@@ -11,6 +21,7 @@ cachetools==4.2.4
 catalogue==2.0.6
 certifi==2021.5.30
 cffi==1.15.0
+cfgv==3.3.1
 charset-normalizer==2.0.6
 clang==5.0
 click==8.0.1
@@ -20,15 +31,21 @@ crcmod==1.7
 cryptography==35.0.0
 cycler==0.11.0
 cymem==2.0.5
+datasets==2.2.1
 debugpy==1.5.1
 decorator==5.1.0
+defusedxml==0.7.1
+dill==0.3.4
+distlib==0.3.4
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
 entrypoints==0.3
 fasteners==0.16.3
-filelock==3.1.0
+filelock==3.6.0
 flake8==4.0.1
 flatbuffers==1.12
 fonttools==4.28.2
+frozenlist==1.3.0
+fsspec==2022.3.0
 gast==0.4.0
 gcs-oauth2-boto-plugin==3.0
 google-api-core==2.1.1
@@ -46,43 +63,73 @@ grpcio==1.41.0
 gsutil==5.4
 h5py==3.1.0
 httplib2==0.20.1
-huggingface-hub==0.0.17
+huggingface-hub==0.6.0
+identify==2.4.12
 idna==3.2
 importlib-metadata==4.2.0
+importlib-resources==5.4.0
 ipykernel==6.5.1
+ipympl==0.8.6
 ipython==7.29.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+isort==5.10.1
 jedi==0.18.1
 Jinja2==3.0.1
 jmespath==0.10.0
 joblib==1.0.1
+jsonschema==4.3.2
 jupyter-client==7.0.6
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
 jupyter-core==4.9.1
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
 keras==2.6.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
+lxml==4.7.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib==3.5.0
 matplotlib-inline==0.1.3
 mccabe==0.6.1
+mistune==0.8.4
 monotonic==1.6
+multidict==6.0.2
+multiprocess==0.70.12.2
 murmurhash==1.0.5
+mypy-extensions==0.4.3
+nbclient==0.5.9
+nbconvert==6.3.0
+nbformat==5.1.3
 nest-asyncio==1.5.1
+nodeenv==1.6.0
+notebook==6.4.6
 numpy==1.19.5
 oauth2client==4.1.3
 oauthlib==3.1.1
 opt-einsum==3.3.0
 packaging==21.0
 pandas==1.3.4
+pandocfilters==1.5.0
 parso==0.8.2
+pathspec==0.9.0
 pathy==0.6.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.4.0
+platformdirs==2.5.1
+pre-commit==2.17.0
 preshed==3.0.5
+prometheus-client==0.12.0
 prompt-toolkit==3.0.22
 protobuf==3.18.0
 ptyprocess==0.7.0
+pyarrow==8.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
@@ -92,6 +139,7 @@ pyflakes==2.4.0
 Pygments==2.10.0
 pyOpenSSL==21.0.0
 pyparsing==2.4.7
+pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytorch-pretrained-bert==0.6.2
 pytz==2021.3
@@ -102,12 +150,14 @@ rank-bm25==0.2.1
 regex==2021.9.24
 requests==2.26.0
 requests-oauthlib==1.3.0
+responses==0.18.0
 retry-decorator==1.1.1
 rsa==4.7.2
 s3transfer==0.5.0
 sacremoses==0.0.46
 scipy==1.7.1
 seaborn==0.11.2
+Send2Trash==1.8.0
 sentencepiece==0.1.96
 setuptools-scm==6.3.2
 six==1.15.0
@@ -121,19 +171,28 @@ tensorboard-plugin-wit==1.8.0
 tensorflow==2.6.0
 tensorflow-estimator==2.6.0
 termcolor==1.1.0
+terminado==0.12.1
+testpath==0.5.0
 thinc==8.0.10
 tokenizers==0.10.3
+toml==0.10.2
 tomli==1.2.2
 torch==1.9.1
 tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
 transformers==4.11.1
+typed-ast==1.5.2
 typer==0.4.0
-typing-extensions==3.7.4.3
+typing_extensions==4.1.1
 urllib3==1.26.7
+virtualenv==20.14.0
 wasabi==0.8.2
 wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==2.0.1
+widgetsnbextension==3.5.2
 wrapt==1.12.1
+xxhash==3.0.0
+yarl==1.7.2
 zipp==3.6.0
