--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
         "editor.codeActionsOnSave": {
             "source.organizeImports": true
         }
+    },
+    "[markdown]": {
+        "files.trimTrailingWhitespace": false
     }
 }
